multilang-schema-registry/shared/test/avro/negative/malformed/invalid_syntax.avsc
{
  "type": "record",
  "name": "InvalidSchema",
  "namespace": "com.amazonaws.services.schemaregistry.test"
  "fields": [
    {
      "name": "field1",
      "type": "string"
    }
  ]
  // Missing comma after namespace - invalid JSON syntax
}
